[package]
name = "guessingGame"
version = "0.1.0"
edition = "2021"
authors = ["Shivangi Sharma <shvngishrmaa@gmail.com>"]
description = "A simple guessing game"
license = "MIT"
repository = "https://github.com/yourusername/guessingGame"
homepage = "https://github.com/yourusername/guessingGame"
documentation = "https://docs.rs/guessingGame"
readme = "README.md"

[dependencies]
rand = "0.8.5"